WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
187469
[GStreamer][MSE] imported/w3c/web-platform-tests/media-source/mediasource-is-type-supported.html crashes
https://bugs.webkit.org/show_bug.cgi?id=187469
Summary
[GStreamer][MSE] imported/w3c/web-platform-tests/media-source/mediasource-is-...
Philippe Normand
Reported
2018-07-09 08:01:44 PDT
Thread 1 (Thread 0x7f764d9bf3c0 (LWP 82639)): #0 _g_log_abort () at /home/slave/webkitgtk/gtk-linux-64-release-tests/build/WebKitBuild/DependenciesGTK/Source/glib-2.54.2/glib/gmessages.c:554 #1 0x00007f76555b6415 in g_logv () at /home/slave/webkitgtk/gtk-linux-64-release-tests/build/WebKitBuild/DependenciesGTK/Source/glib-2.54.2/glib/gmessages.c:1362 #2 0x00007f76555b6562 in g_log () at /home/slave/webkitgtk/gtk-linux-64-release-tests/build/WebKitBuild/DependenciesGTK/Source/glib-2.54.2/glib/gmessages.c:1403 #3 0x00007f765d80bddf in _Z24webKitMediaSrcFreeStreamP15_WebKitMediaSrcP7_Stream () from /home/slave/webkitgtk/gtk-linux-64-release/build/WebKitBuild/Release/lib/libwebkit2gtk-4.0.so.37 #4 0x00007f765d80c5cf in _Z22webKitMediaSrcFinalizeP8_GObject () from /home/slave/webkitgtk/gtk-linux-64-release/build/WebKitBuild/Release/lib/libwebkit2gtk-4.0.so.37 #5 0x00007f765569043a in g_object_unref () at /home/slave/webkitgtk/gtk-linux-64-release-tests/build/WebKitBuild/DependenciesGTK/Source/glib-2.54.2/gobject/gobject.c:3330 #6 0x00007f765660efec in _gst_message_free () at /home/slave/webkitgtk/gtk-linux-64-release-tests/build/WebKitBuild/DependenciesGTK/Source/gstreamer-1.14.1/gst/gstmessage.c:211 #7 0x00007f76565e8911 in gst_message_unref () at /home/slave/webkitgtk/gtk-linux-64-release-tests/build/WebKitBuild/DependenciesGTK/Source/gstreamer-1.14.1/gst/gstmessage.h:379 #8 gst_bus_source_dispatch () at /home/slave/webkitgtk/gtk-linux-64-release-tests/build/WebKitBuild/DependenciesGTK/Source/gstreamer-1.14.1/gst/gstbus.c:842 #9 0x00007f76555af81a in g_main_dispatch () at /home/slave/webkitgtk/gtk-linux-64-release-tests/build/WebKitBuild/DependenciesGTK/Source/glib-2.54.2/glib/gmain.c:3148 #10 g_main_context_dispatch () at /home/slave/webkitgtk/gtk-linux-64-release-tests/build/WebKitBuild/DependenciesGTK/Source/glib-2.54.2/glib/gmain.c:3813 #11 0x00007f76555afba8 in g_main_context_iterate () at /home/slave/webkitgtk/gtk-linux-64-release-tests/build/WebKitBuild/DependenciesGTK/Source/glib-2.54.2/glib/gmain.c:3886 #12 0x00007f76555afec2 in g_main_loop_run () at /home/slave/webkitgtk/gtk-linux-64-release-tests/build/WebKitBuild/DependenciesGTK/Source/glib-2.54.2/glib/gmain.c:4082 #13 0x00007f7659fbf3c0 in _ZN3WTF7RunLoop3runEv () from /home/slave/webkitgtk/gtk-linux-64-release/build/WebKitBuild/Release/lib/libjavascriptcoregtk-4.0.so.18 #14 0x00007f765c48bef2 in _ZN6WebKit16ChildProcessMainINS_10WebProcessENS_14WebProcessMainEEEiiPPc () from /home/slave/webkitgtk/gtk-linux-64-release/build/WebKitBuild/Release/lib/libwebkit2gtk-4.0.so.37 #15 0x00007f76535ee2b1 in __libc_start_main (main=0x561f3a814cb0 <main>, argc=3, argv=0x7ffd036933f8, init=<optimized out>, fini=<optimized out>, rtld_fini=<optimized out>, stack_end=0x7ffd036933e8) at ../csu/libc-start.c:291 #16 0x0000561f3a814d3a in _start () STDERR: STDERR: warning: core file may not match specified executable file. STDERR: invalid unclassed pointer in cast to 'GstAppSrc' STDERR: gst_app_src_set_callbacks: assertion 'GST_IS_APP_SRC (appsrc)' failed
Attachments
Patch
(1.81 KB, patch)
2018-07-09 08:04 PDT
,
Philippe Normand
zan
: review+
ews-watchlist
: commit-queue-
Details
Formatted Diff
Diff
Archive of layout-test-results from ews102 for mac-sierra
(2.29 MB, application/zip)
2018-07-09 09:11 PDT
,
EWS Watchlist
no flags
Details
View All
Add attachment
proposed patch, testcase, etc.
Philippe Normand
Comment 1
2018-07-09 08:04:22 PDT
Created
attachment 344586
[details]
Patch
EWS Watchlist
Comment 2
2018-07-09 09:11:30 PDT
Comment on
attachment 344586
[details]
Patch
Attachment 344586
[details]
did not pass mac-ews (mac): Output:
https://webkit-queues.webkit.org/results/8482940
New failing tests: media/media-fullscreen-return-to-inline.html
EWS Watchlist
Comment 3
2018-07-09 09:11:36 PDT
Created
attachment 344591
[details]
Archive of layout-test-results from ews102 for mac-sierra The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: ews102 Port: mac-sierra Platform: Mac OS X 10.12.6
Philippe Normand
Comment 4
2018-07-19 05:53:56 PDT
Committed
r233981
: <
https://trac.webkit.org/changeset/233981
>
Radar WebKit Bug Importer
Comment 5
2018-07-19 05:54:22 PDT
<
rdar://problem/42379402
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug