[GStreamer][MSE] imported/w3c/web-platform-tests/media-source/mediasource-is-type-supported.html crashes https://bugs.webkit.org/show_bug.cgi?id=187469

Reviewed by Žan Doberšek.

* platform/graphics/gstreamer/mse/WebKitMediaSourceGStreamer.cpp:
(webKitMediaSrcFreeStream): Fix critical warning. The appsrc
element is created only when a valid sourcebuffer is in use.

Canonical link: https://commits.webkit.org/202991@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@233981 268f45cc-cd09-0410-ab3c-d52691b4dbfc